tests/e2e/semantics/index_invalid2.error
Error: syntax error in story at line 2, column 5

2|    e = a["a"]
          ^^^^^

E0104: `List[int]` can't be indexed with `a` of type `string`
