tests/e2e/semantics/index_invalid2.story
a = [1, 2]
e = a["a"]
